@@ -15,7 +15,7 @@ recommend \href{http://thinking-forth.sourceforge.net/}{Thinking Forth} by the s
 
 \subsection{Comparing to other Forths}
 
-There are other Forths for c64, most notably Blazin' Forth. Blazin' Forth is excellent, but durexForth has some advantages:
+There are other Forths for C64, most notably Blazin' Forth. Blazin' Forth is excellent, but durexForth has some advantages:
 
 \begin{itemize}
 \item durexForth uses text files instead of a custom block file system.
