@@ -2,7 +2,7 @@
 
 \section{Music Macro Language}
 
-Music Macro Language (MML) has been used since the 1970s to sequence music on computer and video game systems. MML support is included in durexForth, starting with version 1.3. The package is loaded with \texttt{include mml}. Two demonstration songs can be found in the \texttt{mmldemo} package.
+Music Macro Language (MML) has been used since the 1970s to sequence music on computer and video game systems. The MML package is loaded with \texttt{include mml}. Two demonstration songs can be found in the \texttt{mmldemo} package.
 
 MML songs are played using the Forth word \texttt{play-mml} which takes three strings, one MML melody for each of the three SID voices. An example song is as follows:
 
